correction du contrast

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("img/texture-paper.png");
+    background: url("img/texture-paper-min.png");
     background-size: 280px 280px;
 }
 
@@ -133,7 +133,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: black;
 }
 
 .d-bloc .a-btn:hover,
@@ -556,7 +556,10 @@ a[data-lightbox]:hover img {
     -webkit-animation-fill-mode: none;
     animation-fill-mode: none;
 }
-
+.format-image{
+    width: 100%;
+    height: auto;
+}
 #lightbox-modal {
     display: flex;
     align-items: center;
@@ -571,6 +574,7 @@ a[data-lightbox]:hover img {
 #lightbox-modal .modal-dialog img {
     max-height: 90vh;
     margin: 0 auto;
+    width: 100%;
 }
 
 .lightbox-caption {
@@ -647,8 +651,8 @@ label,
 .btn,
 a {
     font-family: "helvetica","sans-serif";
-    font-weight: 400;
-    color: #575757!important;
+    font-weight: 600;
+    color: #575757;
 }
 
 .container {
@@ -674,7 +678,7 @@ a {
 }
 
 p {
-    font-size: 13px;
+    font-size: 15px;
 }
 
 .tight-width-whitespace {
@@ -709,8 +713,8 @@ h2 {
 h3 {
     font-size: 15px;
     text-transform: uppercase;
-    font-weight: 700;
-    color: #333333!important;
+    font-weight: 800;
+    color: white;
 }
 
 .med-width-whitespace {
@@ -735,7 +739,9 @@ h4 {
 .white {
     color: #FFFFFF!important;
 }
-
+.p-black{
+    color: black;
+}
 .portfolio-thumb {
     margin-bottom: 24px;
 }
@@ -750,7 +756,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(31, 28, 19, 0.96);
+    background-color: rgba(165, 147, 99, 0.7);
     padding: 40px 40px 40px 40px;
 }
 
@@ -772,12 +778,12 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #f3976c !important;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: black!important;
 }
 
 .btn-atomic-tangerine:hover {
@@ -815,7 +821,7 @@ h4 {
 }
 
 .bg-banniere {
-    background-image: url("img/agence-la-panthere.jpg");
+    background-image: url("img/agence-la-panthere-min.jpg");
 }
 
 .bg-presentation {
